--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Ignore Terraform dependency lock file.
+.terraform.lock.hcl
+
+# Ignore private key files.
+*.pem
